@@ -1,8 +1,12 @@
+2000-09-25  Levente Farkas  <lfarkas@mindmaker.hu>
+
+	* ext/stl_hashtable.h (_M_copy_from): Change __copy to __local_copy.
+	
 2000-09-19  Benjamin Kosnik  <bkoz@purist.soma.redhat.com>
 
 	* src/localename.cc (locale::_Imp) : Remove typedefs.	
 	* bits/localefwd.h (locale::locale(const locale& __other, _Facet*
-	__f): Consistency check,, call _Imp ctor with refererence argument
+	__f): Consistency check, call _Imp ctor with reference argument
 	of 1.
 	* bits/localefwd.h: Change _S_num_categories to
 	_S_categories_num. Add new data member, _S_facets_num, which is
